<resources>
    <!-- Название приложения -->
    <string name="app_name">Vacancy aggregator</string>
    <!-- Названия фрагментов -->
    <string name="fragment_search_name">Search Vacancy</string>
    <string name="fragment_favorites_name">Favorites</string>
    <string name="fragment_team_name">Team</string>
    <string name="fragment_vacancy_name">Vacancy</string>
    <string name="fragment_filter_name">Filter Settings</string>
    <string name="fragment_workplace_name">Select Workplace</string>
    <string name="fragment_country_name">Select Country</string>
    <string name="fragment_region_name">Select Region</string>
    <string name="fragment_industry_name">Select Industry</string>
    <!-- Названия пунктов для bottom navigation меню -->
    <string name="tab_main_title">Main</string>
    <string name="tab_favorites_title">@string/fragment_favorites_name</string>
    <string name="tab_team_title">@string/fragment_team_name</string>
    <!-- Экран "Команда" -->
    <string name="credits_developed_by">App developed by</string>
    <string name="technologies_format">Technologies: %s</string>
    <string name="telegram_format">Telegram: %s</string>
    <string name="not_specified">not specified</string>
    <!-- Экран "Вакансия" -->
    <string name="vacancy_empty_list">The list is empty</string>
    <string name="vacancy_not_found">Oops!\nCould\'t load vacancies</string>
    <string name="vacancy_salary_not_specified">Salary not specified</string>
    <string name="vacancy_with_city">%s,\u00A0%s</string>
    <!-- Описание ImageView для accessibility -->
    <string name="team_developer_avatar_description">Photo of the app\'s developer</string>
    <string name="team_error_image_description">Data loading error</string>
    <string name="error_placeholder_description">Error or empty favorites list placeholder</string>
    <string name="company_logo_description">Company logo</string>
    <!-- Названия в поле поиска -->
    <string name="search_vacancies_hint">Enter your request</string>
    <string name="search_region_hint">Enter region</string>
    <!-- Экран вакансия -->
    <string name="vacancy_title">Vacancy title</string>
    <string name="vacancy_salary">Vacancy salary</string>
    <string name="vacancy_sphere">Vacancy sphere</string>
    <string name="vacancy_city">Vacancy city</string>
    <string name="vacancy_required_experience">Required experience</string>
    <string name="vacancy_experience_meaning">Vacancy experience meaning</string>
    <string name="vacancy_schedule">Vacancy schedule</string>
    <string name="vacancy_description_title">Vacancy description</string>
    <string name="vacancy_icon">Vacancy icon</string>
    <string name="vacancy_experience_title">Vacancy experience title</string>
    <string name="vacancy_experience_numbers">Vacancy experience numbers</string>
    <string name="vacancy_employment">Vacancy employment</string>
    <string name="share_button">Share</string>
    <string name="favorite_button">Favorite</string>
    <string name="vacancy_not_found_error">Vacancy is not found or deleted</string>
    <!-- Экран поиска -->
    <string name="no_internet">No internet</string>
    <string name="server_error">Server error</string>
    <string name="no_vacancies_found">No such vacancies</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="something_went_wrong">An error occurred</string>
    <string name="key_skills">Key skills</string>
    <!-- Названия кнопок для экрана фильтров -->
    <string name="button_work_place_name">Work Place</string>
    <string name="button_industry_name">Industry</string>
    <string name="edit_hint_desired_salary_input">Input salary</string>
    <string name="edit_desired_salary_headline">Desired salary</string>
    <string name="check_without_salary_hide">Hide without salary</string>
    <string name="button_country_name">Country</string>
    <string name="button_region_name">Region</string>
    <string name="edit_hint_region_input">Input region</string>
    <string name="button_choose_work_place">Choose</string>
    <string name="button_apply_filter">Apply</string>
    <string name="button_skip_filter">Skip</string>
    <string name="edit_hint_industry_input">Input industry</string>
    <string name="list_problem_placeholder_text">List retrieve failure</string>
    <string name="industry_absent_placeholder_text">Industry not exists</string>
    <string name="region_absent_placeholder_text">Area not exists</string>
</resources>
