<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="ru.practicum.android.diploma.search.presentation.view.SearchFragment"
        android:label="@string/fragment_search_name"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_vacancyFragment"
            app:destination="@id/vacancyFragment" />
        <action
            android:id="@+id/action_searchFragment_to_filterFragment"
            app:destination="@id/filterFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="ru.practicum.android.diploma.favorites.presentation.view.FavoritesFragment"
        android:label="@string/fragment_favorites_name"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favoritesFragment_to_vacancyFragment"
            app:destination="@id/vacancyFragment" />
    </fragment>
    <fragment
        android:id="@+id/teamFragment"
        android:name="ru.practicum.android.diploma.team.presentation.view.TeamFragment"
        android:label="@string/fragment_team_name"
        tools:layout="@layout/fragment_team" >
    </fragment>
    <fragment
        android:id="@+id/vacancyFragment"
        android:name="ru.practicum.android.diploma.vacancy.presentation.view.VacancyFragment"
        android:label="@string/fragment_vacancy_name"
        tools:layout="@layout/fragment_vacancy">
        <argument
            android:name="vacancyId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/filterFragment"
        android:name="ru.practicum.android.diploma.filter.presentation.view.FilterFragment"
        android:label="@string/fragment_filter_name"
        tools:layout="@layout/fragment_filter" >
        <action
            android:id="@+id/action_filterFragment_to_industryFragment"
            app:destination="@id/industryFragment" />
        <action
            android:id="@+id/action_filterFragment_to_workplaceFragment"
            app:destination="@id/workplaceFragment" />
    </fragment>
    <fragment
        android:id="@+id/industryFragment"
        android:name="ru.practicum.android.diploma.industry.presentation.view.IndustryFragment"
        android:label="@string/fragment_industry_name"
        tools:layout="@layout/fragment_industry" />
    <fragment
        android:id="@+id/countryFragment"
        android:name="ru.practicum.android.diploma.country.presentation.view.CountryFragment"
        android:label="@string/fragment_country_name"
        tools:layout="@layout/fragment_country" />
    <fragment
        android:id="@+id/regionFragment"
        android:name="ru.practicum.android.diploma.region.presentation.view.RegionFragment"
        android:label="@string/fragment_region_name"
        tools:layout="@layout/fragment_region" />
    <fragment
        android:id="@+id/workplaceFragment"
        android:name="ru.practicum.android.diploma.workplace.presentation.view.WorkplaceFragment"
        android:label="@string/fragment_workplace_name"
        tools:layout="@layout/fragment_workplace" >
        <action
            android:id="@+id/action_workplaceFragment_to_countryFragment"
            app:destination="@id/countryFragment" />
        <action
            android:id="@+id/action_workplaceFragment_to_regionFragment"
            app:destination="@id/regionFragment" />
    </fragment>
</navigation>
