<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".filter.presentation.view.FilterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <!-- Кнопка "Место работы" -->
    <Button
        android:id="@+id/workPlaceButton"
        style="@style/FilterItemButtonStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_work_place_name"
        app:layout_constraintBottom_toTopOf="@id/industryButton"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Внутренняя надпись "Место работы" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="27dp"
        android:text="@string/button_work_place_name"
        android:textColor="@color/button_item_text_color"
        app:layout_constraintBottom_toBottomOf="@id/workPlaceButton"
        app:layout_constraintStart_toStartOf="@id/workPlaceButton"
        app:layout_constraintTop_toTopOf="@id/workPlaceButton" />

    <Button
        android:id="@+id/industryButton"
        style="@style/FilterItemButtonStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/button_industry_name"
        app:layout_constraintBottom_toTopOf="@id/desiredSalaryEdit"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/workPlaceButton" />

    <!-- Внутренняя надпись "Отрасль" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="27dp"
        android:text="@string/button_industry_name"
        android:textColor="@color/button_item_text_color"
        app:layout_constraintBottom_toBottomOf="@id/industryButton"
        app:layout_constraintStart_toStartOf="@id/industryButton"
        app:layout_constraintTop_toTopOf="@id/industryButton" />

    <!-- Поле ввода "Ожидаемая зарплата" -->
    <EditText
        android:id="@+id/desiredSalaryEdit"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_edit_salary_background"
        android:gravity="bottom"
        android:hint="@string/edit_hint_desired_salary_input"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/edit_text_hint_color"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/industryButton" />

    <!-- Внутренняя надпись "Ожидаемая зарплата" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingBottom="27dp"
        android:text="@string/edit_desired_salary_headline"
        android:textColor="@color/edit_text_hint_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/desiredSalaryEdit"
        app:layout_constraintStart_toStartOf="@id/desiredSalaryEdit"
        app:layout_constraintTop_toTopOf="@id/desiredSalaryEdit" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/desiredSalaryEdit">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="Не показывать без зарплаты"
            android:textColor="@color/salary_cb_text_color" />

        <CheckBox
            android:id="@+id/checkerUnknownSalaryHide"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"

            android:buttonTint="@color/blue" />

    </FrameLayout>

    <!-- Кнопка "Применить" -->
    <Button
        android:id="@+id/applyFilterButton"
        style="@style/FilterApplymentButtonStyle"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:text="@string/button_apply_filter"
        app:layout_constraintBottom_toTopOf="@id/skipFilterButton"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />

    <!-- Кнопка "Сбросить" -->
    <Button
        android:id="@+id/skipFilterButton"
        style="@style/FilterSkipmentButtonStyle"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:text="@string/button_skip_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />

</androidx.constraintlayout.widget.ConstraintLayout>
