<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workplace"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".workplace.presentation.view.WorkplaceFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/value_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/value_16" />

    <!-- Кнопка "Страна" -->
    <Button
        android:id="@+id/countryButton"
        style="@style/FilterItemButtonStyle"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/value_48"
        android:layout_marginTop="@dimen/value_16"
        android:text="@string/button_country_name"
        android:ellipsize="end"
        app:layout_constraintBottom_toTopOf="@id/regionButton"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Внутренняя надпись "Страна" -->
    <TextView
        android:id="@+id/country_inner"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/value_48"
        android:paddingBottom="@dimen/value_28"
        android:text="@string/button_country_name"
        android:textColor="@color/button_item_text_color"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/countryButton"
        app:layout_constraintStart_toStartOf="@id/countryButton"
        app:layout_constraintTop_toTopOf="@id/countryButton" />

    <!-- Кнопка "Регион" -->
    <Button
        android:id="@+id/regionButton"
        style="@style/FilterItemButtonStyle"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/value_48"
        android:text="@string/button_region_name"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/countryButton" />

    <!-- Внутренняя надпись "Регион" -->
    <TextView
        android:id="@+id/area_inner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/value_28"
        android:text="@string/button_region_name"
        android:textColor="@color/button_item_text_color"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/regionButton"
        app:layout_constraintStart_toStartOf="@id/regionButton"
        app:layout_constraintTop_toTopOf="@id/regionButton" />

    <!-- Кнопка "Выбрать место работы" -->
    <Button
        android:id="@+id/chooseWorkPlaceButton"
        style="@style/FilterApplymentButtonStyle"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/value_64"
        android:text="@string/button_choose_work_place"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />

</androidx.constraintlayout.widget.ConstraintLayout>
